2007-03-27  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh (build_import_libs): Delete.
	(build_mingw_fake_runtime): Delete.
	(copy_headers): Delete.
	(build_all): Remove calls to build_import_libs,
	build_mingw_fake_runtime, and copy headers.  Add
	call to build_w32api.
	Remove importlibs,headers and fakecrt command line
	options.  Rename crt option to mingw.

2007-02-12  Pedro Alves  <pedro_alves@portugalmail.pt>

	* VERSIONS : Update w32api and mingw versions.

2007-02-04  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh (copy_headers) : Copy includes from the sys
	subdirectory too.
	* build-cegcc.sh (copy_w32api_headers) : Copy includes from the GL,
	directx, ddk subdirectories too.

2007-02-01  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh : Add help text to explain
	command line build options.

2007-01-20  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_docs) : Copy
	some additional files that need to make it into an RPM.
	* scripts/linux/rpm-create-source.sh : create two different source tar
	files, each containing one SPEC file. For the cegcc and mingw32ce
	distributions.
	* scripts/linux/cegcc.spec, scripts/linux/mingw32ce.spec : these
	versions work.

2007-01-18  Danny Backx <dannybackx@users.sourceforge.net>

	* cegcc/importlibs/build.sh : add definition for mmtimer DLL.

2006-12-31  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Copy the
	options from the mingw_runtime build, so src/profile/Makefile.in gets
	the right parameters and install stuff in the right place.

2006-12-30  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Change the
	approach to deal with -DNO_UNDERSCORES so we keep CFLAGS free for use
	by the command line.

2006-12-24  Danny Backx <dannybackx@users.sourceforge.net>
