@@ -1,3 +1,9 @@
+2007-05-13  Pedro Alves  <pedro_alves@portugalmail.pt>
+
+	* build-mingw32ce.sh: Rewrite command line parameters logic.
+	Add '--prefix' and '--components' options.  Don't mkdir
+	build-mingw32ce.  Build on cwd.
+
 2007-03-27  Pedro Alves  <pedro_alves@portugalmail.pt>
 
 	* build-mingw32ce.sh (build_import_libs): Delete.
